--- a/hugo.toml
+++ b/hugo.toml
@@ -27,6 +27,6 @@ enableRobotsTXT = true
   linkedin = ""
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-black"
-  featured_image = "/images/gohugo-default-sample-hero-image.jpg"
+#  featured_image = "/images/gohugo-default-sample-hero-image.jpg"
   recent_posts_number = 2
 
