--- a/hugo.toml
+++ b/hugo.toml
@@ -1,32 +1,13 @@
 baseURL = "https://shrlab.com/"
-languageCode = "en-us"
+languageCode = "us"
 title = "Sams Sporadic Segments"
+relativeURLs = true
+theme = ["https://github.com/theNewDynamic/gohugo-theme-ananke"]
 
-theme = "ananke"
 
-MetaDataFormat = "yaml"
-DefaultContentLanguage = "en"
-SectionPagesMenu = "main"
-#pagination.pagerSize = "5"
-googleAnalytics = ""
-enableRobotsTXT = true
+enableGitInfo = true
 
-[sitemap]
-  changefreq = "monthly"
-  priority = 0.5
-  filename = "sitemap.xml"
+# disableKinds = ["taxonomy", "taxonomyTerm"]
 
-[params]
-  favicon = ""
-  description = "The last theme you'll ever need. Maybe."
-  facebook = ""
-  twitter = ""
-  instagram = ""
-  youtube = ""
-  github = ""
-  linkedin = ""
-  # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class = "bg-black"
-#  featured_image = "/images/gohugo-default-sample-hero-image.jpg"
-  recent_posts_number = 2
-
+[outputs]
+  home = ["HTML", "RSS","JSON"]
